// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FoundryDataAccess.listActorItems — characterization > returns all items on actor with no type filter 1`] = `
{
  "actorId": "actor-1",
  "actorName": "Test Fighter",
  "count": 3,
  "items": [
    {
      "advances": 0,
      "ammunitionType": null,
      "encumbrance": null,
      "id": "i1",
      "name": "Sword",
      "quantity": null,
      "specification": "",
      "system": {
        "advances": {
          "value": 0,
        },
        "specification": {
          "value": "",
        },
      },
      "type": "weapon",
    },
    {
      "advances": 3,
      "ammunitionType": null,
      "encumbrance": null,
      "id": "i2",
      "name": "Athletics",
      "quantity": null,
      "specification": null,
      "system": {
        "advances": {
          "value": 3,
        },
        "specification": {
          "value": null,
        },
      },
      "type": "skill",
    },
    {
      "advances": 1,
      "ammunitionType": null,
      "encumbrance": null,
      "id": "i3",
      "name": "Frenzy",
      "quantity": null,
      "specification": "",
      "system": {
        "advances": {
          "value": 1,
        },
        "specification": {
          "value": "",
        },
      },
      "type": "talent",
    },
  ],
  "success": true,
}
`;

exports[`FoundryDataAccess.listActorItems — characterization > returns filtered items when typeFilter is given 1`] = `
{
  "actorId": "actor-1",
  "actorName": "Test Fighter",
  "count": 1,
  "items": [
    {
      "advances": 0,
      "ammunitionType": null,
      "encumbrance": null,
      "id": "i2",
      "name": "Athletics",
      "quantity": null,
      "specification": "",
      "system": {
        "advances": {
          "value": 0,
        },
        "specification": {
          "value": "",
        },
      },
      "type": "skill",
    },
  ],
  "success": true,
}
`;

exports[`FoundryDataAccess.listActors — characterization > returns all actors when no type filter is provided 1`] = `
[
  {
    "id": "a1",
    "img": "systems/wfrp4e/icons/actors/human.png",
    "name": "Brunhilde",
    "type": "character",
  },
  {
    "id": "a2",
    "name": "Goblin Boss",
    "type": "creature",
  },
  {
    "id": "a3",
    "img": "systems/wfrp4e/icons/actors/human.png",
    "name": "Hans the Merchant",
    "type": "npc",
  },
]
`;

exports[`FoundryDataAccess.listActors — characterization > returns empty array when no actors match type filter 1`] = `[]`;

exports[`FoundryDataAccess.listActors — characterization > returns only actors matching the given type 1`] = `
[
  {
    "id": "a1",
    "img": "systems/wfrp4e/icons/actors/human.png",
    "name": "Brunhilde",
    "type": "character",
  },
]
`;
